2006-03-29 Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/AddInService.cs: Improved error message
	  for a know error.

2006-03-29 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Core/MonoDevelop.Core.addin.xml: Break backwards
	  compatibility.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Core.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.

	* MonoDevelop.Core.AddIns/AddInService.cs: When checking add-in
	  dependencies, check compatible versions if exact versions are
	  not found.
	* MonoDevelop.Core.addin.xml: Updated add-in version.

2006-03-24  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Core.AddIns/AddInTreeSingleton.cs:
	* MonoDevelop.Core.AddIns.Setup/SetupService.cs:
	* MonoDevelop.Core/DefaultLoggingService.cs:
	* MonoDevelop.Core/FileUtilityService.cs:
	* MonoDevelop.Core/PropertyService.cs:
	Use AppDomain.CurrentDomain.BaseDirectory in case Assembly.GetEntryAssembly() is null.

2006-03-23 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Core/SystemAssemblyService.cs: Load the assembly
	  information in a background thread. Added FindInstalledAssembly
	  method.

2006-03-22 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Core.AddIns/AddIn.cs: Make GetType work for
	  System types.

2006-03-02 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Core.AddIns/AddInTreeSingleton.cs:
	* MonoDevelop.Core.AddIns/AddInService.cs:
	* MonoDevelop.Core.AddIns/DefaultAddInTree.cs:
	* MonoDevelop.Core.AddIns/AssemblyLoader.cs:
	  Made assembly load check optional. It will be enabled when
	  starting the main MD app, but not for tools.

2006-02-28  Jacob Ilsø Christensen <jacobilsoe@gmail.com> 

	* MonoDevelop.Core/GettextCatalog.cs.in: Added a string.Format
	version of GetPluralString.

2006-02-19  Andrés G. Aragoneses  <knocte@gmail.com>

        * MonoDevelop.Core/PropertyService.cs: fixed a typo in a 
	comment.
