@@ -1,3 +1,10 @@
+2006-03-29 Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Core.Execution/ProcessHostController.cs:
+	* MonoDevelop.Core.Execution/ProcessService.cs: Support the
+	  Unix channel for comunication with the host process.
+	* MonoDevelop.Core/Runtime.cs: Added Shutdown method.
+
 2006-03-29 Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* MonoDevelop.Core.AddIns/AddInService.cs: Improved error message
